tests/outputs/Filter_022.out
Parse tree from tests/cases/Filter_022.inp:
Filter(9999)
  Expression(9999)
    ExpressionClause(9999)
      ExpressionPhrase(9999)
        Comparison(9999)
          PropertyFirstComparison(9999)
            Property(9999)
              Identifier(9999)
                LowercaseLetter(9999)
                  TOKEN_95(9999): "p", line: 1, col: 1
                LowercaseLetter(9999)
                  TOKEN_97(9999): "r", line: 1, col: 2
                LowercaseLetter(9999)
                  TOKEN_94(9999): "o", line: 1, col: 3
                LowercaseLetter(9999)
                  TOKEN_99(9999): "t", line: 1, col: 4
                LowercaseLetter(9999)
                  TOKEN_94(9999): "o", line: 1, col: 5
                LowercaseLetter(9999)
                  TOKEN_99(9999): "t", line: 1, col: 6
                LowercaseLetter(9999)
                  TOKEN_104(9999): "y", line: 1, col: 7
                LowercaseLetter(9999)
                  TOKEN_95(9999): "p", line: 1, col: 8
                LowercaseLetter(9999)
                  TOKEN_84(9999): "e", line: 1, col: 9
                LowercaseLetter(9999)
                  TOKEN_78(9999): "_", line: 1, col: 10
                LowercaseLetter(9999)
                  TOKEN_85(9999): "f", line: 1, col: 11
                LowercaseLetter(9999)
                  TOKEN_94(9999): "o", line: 1, col: 12
                LowercaseLetter(9999)
                  TOKEN_97(9999): "r", line: 1, col: 13
                LowercaseLetter(9999)
                  TOKEN_92(9999): "m", line: 1, col: 14
                LowercaseLetter(9999)
                  TOKEN_100(9999): "u", line: 1, col: 15
                LowercaseLetter(9999)
                  TOKEN_91(9999): "l", line: 1, col: 16
                LowercaseLetter(9999)
                  TOKEN_80(9999): "a", line: 1, col: 17
                Spaces(9999)
                  Space(9999)
                    TOKEN_1(9999): " ", line: 1, col: 18
Error: in tests/cases/Filter_022.inp: line 1:
    unexpected token "UNKNOWN", expected one of "<", ">", "!", "=",
    "IS", "CONTAINS", "STARTS", "ENDS", "HAS", ":", or "LENGTH"

prototype_formula UNKNOWN
                  ^
